Fix history list item jumpiness, fix dark theme empty stock item

--- a/client/web/src/design/scss/theme.scss
+++ b/client/web/src/design/scss/theme.scss
@@ -187,8 +187,8 @@ i {
   background-color: var(--background-hover);
 }
 
-.white-bg {
-  background-color: #ffffff;
+.main-bg {
+  background-color: var(--background);
 }
 
 footer {
